Commit 2: modificaciones a index.html (del Ejercicio6)

--- a/index.html
+++ b/index.html
@@ -14,5 +14,34 @@
     <!-- Inserta un párrafo, no obedece a saltos de línea -->
     <p>Como lo indica el título de la pestaña de esta página, me llamo Saulo Andres Cáceres Granados. Tengo 18 años y vivo en Arequipa, en el distrito de Mariano Melgar. Y no tengo un cuarto propio.</p>
     <p>Lo que me interesa del curso es: primero, entender todos estos conceptos de la programación web; segundo, mejorar en el desarrollo de mi vida profesional para lograr ser un buen ingeniero; y tercero, esta vez sí aprobar el curso, aprovechando que quitaron Perl del sílabo nuevo, gracias a Dios.</p>
+
+    <!-- Ejercicio 6 -->
+    <h2>¿En dónde cursaste tus estudios escolares?</h2> <!-- Primer encabezado: Cursos escolares -->
+    <p>
+        Mis estudios primarios los cursé en la I.E. Cristo Rey, en Camaná; los estudios secundarios fueron en la I.E. Sebastián Barranca, también en Camaná.
+    </p>
+    <h2>¿Por qué escogió esta carrera profesional?</h2> <!-- Segundo encabezado: La carrera -->
+    <p>
+        Escogí esta carrera, principalmente, por mi preferencia y gusto hacia la tecnología. Además, considero poder hacer muchas cosas con el uso de habilidades en programación o elaboración de sistemas que más adelante perfeccionaré.
+    </p>
+
+    <h3>Mis hobbies</h3> <!-- Tercer encabezado: Mis hobbies -->
+    <p>
+        Entre mis hobbies se encuentran: <br>
+        - Leer <br>
+        - Coleccionar <br>
+        - Jugar videojuegos <br>
+        - Escribir <br>
+        - Imaginar escenarios épicos donde soy el protagonista y gano una pelea contra 100 <br>
+        - No hacer nada <br>
+    </p>
+
+    <h4>Mis redes sociales</h4> <!-- Cuarto encabezado: Mis redes sociales -->
+    <p>
+        No soy de usar mucho las redes sociales. Solo uso las comunes: <br>
+        - WhatsApp <br>
+        - Facebook (solo para ver memes) <br>
+        - Youtube <br>
+    </p>
 </body>
 </html>
