Commit 3: agragados imágenes en local y remoto (Ejercicio 8)

--- a/index.html
+++ b/index.html
@@ -29,10 +29,21 @@
     <p>
         Entre mis hobbies se encuentran: <br>
         - Leer <br>
+        <img src="recursos/1984.jpg" alt="1984" style="height: 300px;">
+        <img src="recursos/farenheit.jpg" alt="farenheit 451" style="height: 300px;">
+        <img src="recursos/cthulhu.jpg" alt="Mitos de cthulhu" style="height: 300px;">
+        <img src="recursos/mundofeliz.jpg" alt="Un mundo Feliz" style="height: 300px;"> <br>
         - Coleccionar <br>
+        <img src="https://i.ytimg.com/vi/YM9_Khx-HKs/maxresdefault.jpg" alt="Album" style="height: 300px">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTPkTv3RPAHTWJZmvn_KRR26GMPIhushqxrsg&s" alt="Monedas" style="height: 300px;"> <br>
         - Jugar videojuegos <br>
-        - Escribir <br>
+        <img src="recursos/blasphemous.jpg" alt="Blasphemous" style="height: 300px;">
+        <img src="recursos/minecraft.webp" alt="Minecraft" style="height: 300px;">
+        <img src="recursos/gtaSA.webp" alt="GTA SA" style="height: 300px;"><br>
+        - Escribir (Algún día subiré todo lo que tengo) <br>
+        <img src="recursos/wattpad.jpg" alt="WAttpad"  style="height: 300px;"><br>
         - Imaginar escenarios épicos donde soy el protagonista y gano una pelea contra 100 <br>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-IAkMq5LZJmQSK9fhB8OdoUhURF1vzXVHIA&s" alt="Imaginar" style="height: 300px;"><br>
         - No hacer nada <br>
     </p>
 
@@ -40,8 +51,11 @@
     <p>
         No soy de usar mucho las redes sociales. Solo uso las comunes: <br>
         - WhatsApp <br>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/2044px-WhatsApp.svg.png" alt="WhatsApp" style="height: 100px;"><br>
         - Facebook (solo para ver memes) <br>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ee/Logo_de_Facebook.png/1028px-Logo_de_Facebook.png" alt="Facebook" style="height: 100px;"><br>
         - Youtube <br>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSNQTXmpmU6QHLKCluDXWal6WsGgBTFTNIrgw&s" alt="Youtube" style="height: 100px;"><br>
     </p>
 </body>
 </html>
